@@ -3,15 +3,15 @@ package uz.company.container;
 import uz.company.bot.Kfc_bot;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class ComponentContainer {
 
-    public static Kfc_bot bot = new Kfc_bot()   ;
+    public static Kfc_bot bot = new Kfc_bot();
+
     public final static String botUserName = "http://t.me/with_Fotih_bot";
     public final static String botToken = "6120360154:AAGPQchasYK6oazwQyRGSc4v61VPOv5XEaE";
-    public static List<String> AdminsList =new ArrayList<>(Arrays.asList("1698542480"));
-    public static String lastMessage = "";
+    public static List<String> AdminsList = new ArrayList<>(List.of("1698542480"));
+
     public static List<String> curreersList = new ArrayList<>();
 }
