@@ -5,9 +5,12 @@ import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMa
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.ReplyKeyboard;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 import uz.company.constants.UserKeyboardConstants;
+import uz.company.container.ThreadSafeBeanContext;
+import uz.company.controller.UserController;
 import uz.company.db.DataStore;
 import uz.company.model.Product;
 import uz.company.model.enums.Type;
+import uz.company.service.UserService;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -16,8 +19,9 @@ import java.util.List;
 public class UserInlineKeybordUtil {
 
 
+    public ReplyKeyboard getMenuInlineMarkup(List list) {
 
-    public static ReplyKeyboard getMenuInlineMarkup(List list) {
+
         List<List<InlineKeyboardButton>> inlineKeybordList = new ArrayList<>();
 
         if (list.isEmpty()) {
@@ -59,7 +63,6 @@ public class UserInlineKeybordUtil {
     }
 
     public ReplyKeyboard getListOfProducts(SendMessage sendMessage, Type type) {
-
         List<List<InlineKeyboardButton>> inlineKeybordList = new ArrayList<>();
 
         for (Product product : DataStore.productList) {
@@ -74,46 +77,96 @@ public class UserInlineKeybordUtil {
         }
 
         List<InlineKeyboardButton> inlineKeyboardButtons = new ArrayList<>();
-        InlineKeyboardButton button = new InlineKeyboardButton("Ortga->");
+        InlineKeyboardButton button = new InlineKeyboardButton(UserKeyboardConstants.BACK);
         button.setCallbackData("Ortga->");
         inlineKeyboardButtons.add(button);
         inlineKeybordList.add(inlineKeyboardButtons);
 
         if (inlineKeybordList.isEmpty()) {
-            sendMessage.setText("Bunday Product hozirda mavjud emas");
-            return getOneButton("Ortga->");
-
+            sendMessage.setText("Этот продукт в данный момент недоступен");
+            return getOneButton("Back->");
         }
-
         return new InlineKeyboardMarkup(inlineKeybordList);
-
-
     }
 
     public static InlineKeyboardMarkup getOneButton(String str) {
         InlineKeyboardButton inlineKeyboardButton = new InlineKeyboardButton(str);
         inlineKeyboardButton.setCallbackData(str);
-        List<List<InlineKeyboardButton>> inlineKeybordList = new ArrayList<>(Arrays.asList(Arrays.asList(inlineKeyboardButton)));
+        List<List<InlineKeyboardButton>> inlineKeybordList = new ArrayList<>(List.of(List.of(inlineKeyboardButton)));
         return new InlineKeyboardMarkup(inlineKeybordList);
     }
 
-    public ReplyKeyboard getButtonForProduct() {
-        InlineKeyboardButton toBascet = new InlineKeyboardButton(UserKeyboardConstants.TO_BASkET);
-        toBascet.setCallbackData("toBascket");
+    public ReplyKeyboard getButtonForProduct(String s) {
+
+
+        InlineKeyboardButton toBascet = new InlineKeyboardButton(UserKeyboardConstants.TO_BASKET);
+        toBascet.setCallbackData("toBascket=" + s);
         InlineKeyboardButton like = new InlineKeyboardButton(UserKeyboardConstants.LIKE);
         like.setCallbackData("like");
         InlineKeyboardButton bascet = new InlineKeyboardButton(UserKeyboardConstants.GETBASCET);
         bascet.setCallbackData("getBasket");
         InlineKeyboardButton back = new InlineKeyboardButton(UserKeyboardConstants.BACK);
         back.setCallbackData("_back");
-
-        List<InlineKeyboardButton> row1 = new ArrayList<>(Arrays.asList(toBascet));
+        List<InlineKeyboardButton> row1 = new ArrayList<>(List.of(toBascet));
         List<InlineKeyboardButton> row2 = new ArrayList<>(Arrays.asList(like, bascet));
-        List<InlineKeyboardButton> row3 = new ArrayList<>(Arrays.asList(back));
+        List<InlineKeyboardButton> row3 = new ArrayList<>(List.of(back));
 
         return new InlineKeyboardMarkup(Arrays.asList(row1, row2, row3));
+
     }
 
 
+    public ReplyKeyboard getBasket() {
+        InlineKeyboardButton button1 = new InlineKeyboardButton(UserKeyboardConstants.EDIT_BASKET);
+        button1.setCallbackData("editbascet");
+        InlineKeyboardButton button2 = new InlineKeyboardButton(UserKeyboardConstants.CLEARBASKET);
+        button2.setCallbackData("clearBascet");
+        InlineKeyboardButton button3 = new InlineKeyboardButton(UserKeyboardConstants.MakeOreder);
+        button3.setCallbackData("_makeOrder");
 
+        List<InlineKeyboardButton> buttons = new ArrayList<>(Arrays.asList(button1, button2));
+        List<InlineKeyboardButton> buttons1 = new ArrayList<>(List.of(button3));
+        return new InlineKeyboardMarkup(Arrays.asList(buttons, buttons1));
+    }
+
+    public ReplyKeyboard getButtonForOrderedProduct(Product product) {
+        UserService userService = ThreadSafeBeanContext.USER_SERVICE_THREAD_LOCAL.get();
+
+        InlineKeyboardButton button = new InlineKeyboardButton("-1");
+        button.setCallbackData("-" + product.getId());
+        Integer integer = UserController.userr.getBasket().get(product);
+        InlineKeyboardButton button2 = new InlineKeyboardButton("✏ " + String.valueOf(integer) + "dona");
+        button2.setCallbackData("_editProductNumber=" + product.getId());
+        InlineKeyboardButton button3 = new InlineKeyboardButton("1+");
+        button3.setCallbackData("+" + product.getId());
+        InlineKeyboardButton button4 = new InlineKeyboardButton("❤");
+        button4.setCallbackData("_like=" + product.getId());
+        InlineKeyboardButton button5 = new InlineKeyboardButton("\uD83D\uDDD1 " +
+                userService.countBascetPrice(UserController.userr.getBasket()) +
+                " uzs");
+        button5.setCallbackData("_showBascet");
+        InlineKeyboardButton button6 = new InlineKeyboardButton(UserKeyboardConstants.BACK);
+        button6.setCallbackData("_back");
+
+        List<InlineKeyboardButton> row1 = new ArrayList<>(
+                Arrays.asList(button, button2, button3)
+        );
+        List<InlineKeyboardButton> row2 = new ArrayList<>(
+                Arrays.asList(button4, button5)
+        );
+        List<InlineKeyboardButton> row3 = new ArrayList<>(
+                Arrays.asList(button6)
+        );
+        return new InlineKeyboardMarkup(Arrays.asList(row1, row2, row3));
+    }
+
+    public ReplyKeyboard getLanguageInlineKeyboard() {
+        InlineKeyboardButton button1 = new InlineKeyboardButton("uz");
+        button1.setCallbackData("uz");
+        InlineKeyboardButton button2 = new InlineKeyboardButton("ru");
+        button2.setCallbackData("ru");
+
+        List<InlineKeyboardButton> inlineKeyboardButtons = new ArrayList<>(Arrays.asList(button1, button2));
+        return new InlineKeyboardMarkup(List.of(inlineKeyboardButtons));
+    }
 }
